--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
     "concurrently": "^6.2.1",
+    "gray-matter": "^4.0.3",
     "markdown-it": "^12.2.0",
     "markdown-it-anchor": "^8.3.1",
     "npm-run-all": "^4.1.5",
